--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.32.0",
     "@total-typescript/ts-reset": "^0.4.2",
@@ -34,12 +35,14 @@
     "encoding": "^0.1.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "markdown-it": "^13.0.1",
     "next": "13.4.12",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "sharp": "^0.32.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
